注释掉在编译的时候出现错误的代码，主要在koala-bpm-oss中

--- a/koala-plugin/koala-plugin-create/src/main/resources/vm/base/module.pom.xml.vm
+++ b/koala-plugin/koala-plugin-create/src/main/resources/vm/base/module.pom.xml.vm
@@ -64,7 +64,8 @@
         </dependency>  
         <dependency> 
             <groupId>org.openkoala.koalacommons</groupId>  
-            <artifactId>koala-commons-domain</artifactId> 
+            <artifactId>koala-commons-domain</artifactId>
+            <version>4.0.0</version>
         </dependency>
   <!-- 加入CONF依赖 -->
   <dependency>
