--- a/koala-plugin/koala-plugin-create/src/main/resources/vm/base/project.pom.xml.vm
+++ b/koala-plugin/koala-plugin-create/src/main/resources/vm/base/project.pom.xml.vm
@@ -477,35 +477,35 @@
             <dependency>
                 <groupId>org.openkoala.koalacommons</groupId>
                 <artifactId>koala-commons-ftp</artifactId>
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
             </dependency>
 
             <dependency>
                 <groupId>org.openkoala.koalacommons</groupId>
                 <artifactId>koala-commons-exception</artifactId>
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
             </dependency>
 
             <dependency>
                 <groupId>org.openkoala.koalacommons</groupId>
                 <artifactId>koala-commons-i18n</artifactId>
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
             </dependency>
             
 	        <dependency> 
 	            <groupId>org.openkoala.koalacommons</groupId>  
 	            <artifactId>koala-commons-domain</artifactId>  
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
 	        </dependency>  
             <dependency>
 			<groupId>org.openkoala.koalacommons</groupId>
 			<artifactId>koala-commons-facade</artifactId>
-		    <version>${koala.version}</version>
+		    <version>4.0.0</version>
 		</dependency>
           <dependency>
 			<groupId>org.openkoala.koalacommons</groupId>
 			<artifactId>koala-commons-dddlib-mybatis</artifactId>
-			<version>${koala.version}</version>
+			<version>4.0.0</version>
 		  </dependency>
             <dependency>
                 <groupId>commons-lang</groupId>
@@ -689,17 +689,17 @@
             <dependency>
                 <groupId>org.openkoala.koalacommons</groupId>
                 <artifactId>koala-commons-cache</artifactId>
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>org.openkoala.koalacommons</groupId>
                 <artifactId>koala-commons-support</artifactId>
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>org.openkoala.koalacommons</groupId>
                 <artifactId>koala-commons-ui-support</artifactId>
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
             </dependency>
 
             <dependency>
@@ -725,38 +725,38 @@
             <dependency>
                 <groupId>org.openkoala.gqc</groupId>
                 <artifactId>koala-gqc-application</artifactId>
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
             </dependency>
 
             <dependency>
                 <groupId>org.openkoala.gqc</groupId>
                 <artifactId>koala-gqc-controller</artifactId>
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
             </dependency>
 
             <dependency>
                 <groupId>org.openkoala.gqc</groupId>
                 <artifactId>koala-gqc-applicationImpl</artifactId>
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
             </dependency>
 
             <dependency>
                 <groupId>org.openkoala.gqc</groupId>
                 <artifactId>koala-gqc-controller</artifactId>
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
             </dependency>
 
 
             <dependency>
                 <groupId>org.openkoala.monitor</groupId>
                 <artifactId>koala-jmonitor-application</artifactId>
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
             </dependency>
 
             <dependency>
                 <groupId>org.openkoala.monitor</groupId>
                 <artifactId>koala-jmonitor-applicationImpl</artifactId>
-                <version>${koala.version}</version>
+                <version>4.0.0</version>
             </dependency>
 
             <dependency>
